--- a/env.example
+++ b/env.example
@@ -1,7 +1,3 @@
-# AI Image Editor
-## A web app that allows users to edit images using AI. Built with Next.js, Convex, Clerk, Imagekit, and Unsplash API.
-```
-# Deployment used by `npx convex dev`
 CONVEX_DEPLOYMENT=
 
 NEXT_PUBLIC_CONVEX_URL=
@@ -14,11 +10,10 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
 CLERK_JWT_ISSUER_DOMAIN=
 
-# Imagekit
+# IMAGE KIT
 NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY=
 NEXT_PUBLIC_IMAGEKIT_URL_ENDPOINT=
 IMAGEKIT_PRIVATE_KEY=
 
-# Unsplash
+# UNSPLASH
 NEXT_PUBLIC_UNSPLASH_ACCESS_KEY=
-```
